# Project1

./: .env.example.py  .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: transactions_excel.xlsx
htmlcov/: z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_utils_py.html
src/: decorators.py  dictonary_search.py  external_api.py  generators.py  masks.py  processing.py  reader_data_csv.py  reader_data_excel.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_dictonary_search.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_reader_data.py  test_utils.py  test_widget.py
