[tool.poetry]
name = "homeworkbank"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"


[tool.mypy]
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
exclude = 'venv'


[tool.black]
line-length = 119
# Максимальная длина строки


[tool.isort]
line_length = 119
